fixed link decoration styling so it can render on mobile, fixed url destination, adjusted footer scroll text

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -32,7 +32,7 @@
 
   justify-content: space-between;
   font-size: 1.25rem;
-  width: 50%;
+  width: 75%;
   //   @include tablet {
   //     font-size: 1.5rem;
   //   }
