--- a/src/components/ScrollingText/ScrollingText.scss
+++ b/src/components/ScrollingText/ScrollingText.scss
@@ -2,10 +2,7 @@
 @import "./../../styles/partials/typography.scss";
 @import "./../../styles/partials/variables.scss";
 
-// .marquee {
-//   margin-bottom: 5rem;
-// }
-
 .scrolling-text {
   padding: 0 1rem;
+  margin-bottom: 0 !important;
 }
